Fix Build Warning in JavaScriptCore ControlFlowProfiler::dumpData() api. https://bugs.webkit.org/show_bug.cgi?id=139384

Patch by Shivakumar JM <shiva.jm@samsung.com> on 2014-12-08
Reviewed by Mark Lam.

Fix Build Warning by using dataLog() function instead of dataLogF() function.

* runtime/ControlFlowProfiler.cpp:
(JSC::ControlFlowProfiler::dumpData):

Canonical link: https://commits.webkit.org/157286@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177009 268f45cc-cd09-0410-ab3c-d52691b4dbfc